tweak for mobile

--- a/jazz_chord_progression_editor.html
+++ b/jazz_chord_progression_editor.html
@@ -443,7 +443,10 @@
         <nav class="bg-gray-800 shadow-lg p-2 sm:p-4 flex items-center justify-between">
             <div class="flex items-center">
                 <i class="fas fa-music text-violet-400 text-xl sm:text-2xl mr-2"></i>
-                <h1 class="text-lg sm:text-xl font-bold truncate">Jazz Chord Progression Editor</h1>
+                <h1 class="text-base sm:text-xl font-bold">
+                    <span class="hidden sm:inline">Jazz Chord Progression Editor</span>
+                    <span class="sm:hidden">Jazz Progressions</span>
+                </h1>
             </div>
 
             <div class="flex space-x-1 sm:space-x-2">
