--- a/jazz_chord_progression_editor.html
+++ b/jazz_chord_progression_editor.html
@@ -145,24 +145,6 @@
             box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
         }
 
-        @media (max-width: 767px) {
-            body {
-                overflow-x: hidden;
-                position: relative;
-                width: 100%;
-            }
-
-            /* Make section headings smaller and add truncation */
-            .section-heading {
-                font-size: 1rem !important;
-                max-width: 60% !important;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-
-        }
-
         /* Virtual piano keyboard */
         .piano-key {
             height: 60px;
@@ -201,60 +183,10 @@
             bottom: 2px;
         }
 
-        /* Improved touch targets */
-        @media (max-width: 767px) {
-            .btn {
-                min-height: 2.5rem;
-                /* Larger touch targets on mobile */
-            }
-
-            .btn-circle {
-                height: 2rem;
-                width: 2rem;
-                min-height: 2rem;
-            }
-
-            .chord-card {
-                padding: 0.75rem;
-                margin-bottom: 0.5rem;
-            }
-
-            .dropdown-content {
-                min-width: 12rem;
-                /* Wider dropdowns on mobile */
-            }
-
-            /* Increase spacing for piano keys on touch devices */
-            .piano-key {
-                height: 80px;
-            }
-
-            .white-key {
-                width: 40px;
-            }
-
-            .black-key {
-                width: 24px;
-                height: 50px;
-                margin-left: -12px;
-            }
-        }
-
         /* Better mobile scrolling */
         .overflow-y-auto,
         .overflow-x-auto {
             -webkit-overflow-scrolling: touch;
-        }
-
-        /* Prevent zooming when tapping inputs on iOS */
-        @media (max-width: 767px) {
-
-            input,
-            select,
-            textarea,
-            button {
-                font-size: 16px !important;
-            }
         }
 
         /* Improved touch area for range sliders */
@@ -298,20 +230,11 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
 
-        /* More space for mobile modals */
-        @media (max-width: 767px) {
-            .modal-box {
-                max-height: 80vh;
-                overflow-y: auto;
-            }
-        }
-
         /* Helper class for better touch targets */
         .touch-manipulation {
             touch-action: manipulation;
         }
 
-        /* Add to your CSS */
         .chord-card {
             transition: transform 0.2s, opacity 0.2s, box-shadow 0.2s;
             touch-action: pan-y;
@@ -342,27 +265,6 @@
             border: 2px dashed rgba(139, 92, 246, 0.5) !important;
         }
 
-        /* Add swipe hint animation */
-        @media (max-width: 768px) {
-            .chord-card::after {
-                content: '';
-                position: absolute;
-                top: 50%;
-                width: 30px;
-                height: 30px;
-                transform: translateY(-50%);
-                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='rgba(139, 92, 246, 0.3)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17 8l4 4-4 4M3 12h18'/%3E%3C/svg%3E");
-                background-repeat: no-repeat;
-                opacity: 0;
-                transition: opacity 0.3s;
-                pointer-events: none;
-            }
-
-            .chord-card:active::after {
-                opacity: 0.7;
-                animation: swipeHint 1s infinite;
-            }
-        }
 
         @keyframes swipeHint {
             0% {
@@ -383,12 +285,47 @@
 
         @media (max-width: 768px) {
 
+            input,
+            select,
+            textarea,
+            button {
+                font-size: 16px !important;
+            }
+
+            .modal-box {
+                max-height: 80vh;
+                overflow-y: auto;
+            }
+
             /* Ensure full width for chord cards */
             .chord-card {
                 width: 100% !important;
                 max-width: 100% !important;
                 margin-left: 0 !important;
                 margin-right: 0 !important;
+                padding: 0.75rem !important;
+                border-radius: 0.5rem !important;
+                margin-bottom: 0.5rem !important;
+            }
+
+            /* Add a swipe hint for chord cards */
+            .chord-card::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                width: 30px;
+                height: 30px;
+                transform: translateY(-50%);
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='rgba(139, 92, 246, 0.3)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17 8l4 4-4 4M3 12h18'/%3E%3C/svg%3E");
+                background-repeat: no-repeat;
+                opacity: 0;
+                transition: opacity 0.3s;
+                pointer-events: none;
+            }
+
+            .chord-card:active::after {
+                opacity: 0.7;
+                animation: swipeHint 1s infinite;
             }
 
             /* Reduce unnecessary padding */
@@ -409,17 +346,33 @@
                 grid-template-columns: 1fr !important;
                 /* Force single column on small screens */
             }
-        }
 
-        /* Add to your CSS */
-        @media (max-width: 768px) {
-
-            /* Edge-to-edge design for mobile */
             body {
+                position: relative;
                 margin: 0;
                 padding: 0;
                 width: 100vw;
                 overflow-x: hidden;
+            }
+
+            /* Make section headings smaller and add truncation */
+            .section-heading {
+                font-size: 1rem !important;
+                max-width: 60% !important;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+
+            /* Larger touch targets on mobile */
+            .btn {
+                min-height: 2.5rem;
+            }
+
+            .btn-circle {
+                height: 2rem;
+                width: 2rem;
+                min-height: 2rem;
             }
 
             /* Remove rounded corners on mobile for edge-to-edge feel */
@@ -436,17 +389,29 @@
                 max-width: 100vw !important;
             }
 
-            /* Add padding to inner content instead */
-            .chord-card {
-                padding: 0.75rem !important;
-                border-radius: 0.5rem !important;
-                /* Keep some rounding on cards */
-                margin-bottom: 0.5rem !important;
-            }
-
             /* Add stretch animation for chord card interaction */
             .chord-card:active {
                 transform: scaleX(0.98);
+            }
+
+            .dropdown-content {
+                min-width: 12rem;
+                /* Wider dropdowns on mobile */
+            }
+
+            /* Increase spacing for piano keys on touch devices */
+            .piano-key {
+                height: 80px;
+            }
+
+            .white-key {
+                width: 40px;
+            }
+
+            .black-key {
+                width: 24px;
+                height: 50px;
+                margin-left: -12px;
             }
         }
     </style>
