--- a/jazz_chord_progression_editor.html
+++ b/jazz_chord_progression_editor.html
@@ -401,9 +401,30 @@
                 transform: scaleX(0.98);
             }
 
-            .dropdown-content {
-                min-width: 12rem;
-                /* Wider dropdowns on mobile */
+            /* Force mobile dropdowns to appear in the center of the screen as a modal */
+            .mobile-dropdown .dropdown-content {
+                position: fixed !important;
+                top: 50% !important;
+                left: 50% !important;
+                transform: translate(-50%, -50%) !important;
+                width: 80vw !important;
+                max-width: 300px !important;
+                max-height: 80vh !important;
+                overflow-y: auto !important;
+                z-index: 999 !important;
+                box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) !important;
+            }
+
+            /* Add backdrop for better visibility */
+            .dropdown.open::before {
+                content: '';
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.5);
+                z-index: 998;
             }
 
             /* Increase spacing for piano keys on touch devices */
@@ -488,9 +509,9 @@
                 <button @click="openImportModal()" class="btn btn-xs sm:btn-sm btn-ghost">
                     <i class="fas fa-upload sm:mr-1"></i><span class="hidden sm:inline">Import</span>
                 </button>
-                <div class="dropdown dropdown-end">
+                <div class="dropdown dropdown-end mobile-dropdown">
                     <label tabindex="0" class="btn btn-xs sm:btn-sm btn-ghost">
-                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-sliders-h"></i>
                     </label>
                     <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
                         <li><a @click="openSettingsModal()"><i class="fas fa-cog mr-2"></i> Settings</a></li>
