--- a/jazz_chord_progression_editor.html
+++ b/jazz_chord_progression_editor.html
@@ -509,17 +509,44 @@
                 <button @click="openImportModal()" class="btn btn-xs sm:btn-sm btn-ghost">
                     <i class="fas fa-upload sm:mr-1"></i><span class="hidden sm:inline">Import</span>
                 </button>
-                <div class="dropdown dropdown-end mobile-dropdown">
-                    <label tabindex="0" class="btn btn-xs sm:btn-sm btn-ghost">
-                        <i class="fas fa-sliders-h"></i>
-                    </label>
-                    <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
-                        <li><a @click="openSettingsModal()"><i class="fas fa-cog mr-2"></i> Settings</a></li>
-                        <li><a @click="openHelpModal()"><i class="fas fa-question-circle mr-2"></i> Help</a></li>
-                        <li class="md:hidden"><a @click="toggleAdvancedVoicing()"><i class="fas fa-sliders-h mr-2"></i>
-                                <span x-text="useAdvancedVoicing ? 'Simple Voicing' : 'Advanced Voicing'"></span></a>
+                <div class="dropdown mobile-dropdown sm:hidden">
+                    <label tabindex="0" class="btn btn-sm btn-circle"><i class="fas fa-sliders-h"></i></label>
+                    <ul tabindex="0" class="dropdown-content menu p-3 shadow bg-base-100 rounded-box w-64 z-50">
+                        <li class="mb-2">
+                            <div class="w-full">
+                                <label class="label font-semibold">Instrument</label>
+                                <select x-model="instrument" @change="changeInstrument()"
+                                    class="select select-bordered w-full">
+                                    <option value="piano">Piano</option>
+                                    <option value="rhodes">Electric Piano</option>
+                                    <option value="synth">Moog Synth</option>
+                                    <option value="warm-pad">Warm Pad</option>
+                                    <option value="analog-saw">Analog Saw</option>
+                                    <option value="marimba">Marimba</option>
+                                    <option value="vibraphone">Vibraphone</option>
+                                </select>
+                            </div>
                         </li>
-                        <li><a @click="copyCurrentProgressionAsText()"><i class="fas fa-copy mr-2"></i> Copy as Text</a>
+                        <li class="mb-2">
+                            <div class="w-full">
+                                <label class="label font-semibold">Volume</label>
+                                <input type="range" min="0" max="1" step="0.1" x-model="volume" @change="updateVolume()"
+                                    class="range range-primary w-full">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="w-full">
+                                <label class="label font-semibold">Tempo</label>
+                                <select x-model="tempo" @change="updateTempo()" class="select select-bordered w-full">
+                                    <option value="40">40 BPM</option>
+                                    <option value="60">60 BPM</option>
+                                    <option value="80">80 BPM</option>
+                                    <option value="100">100 BPM</option>
+                                    <option value="120">120 BPM</option>
+                                    <option value="140">140 BPM</option>
+                                    <option value="160">160 BPM</option>
+                                </select>
+                            </div>
                         </li>
                     </ul>
                 </div>
